sample_project/build/log/idf_py_stdout_output_1884
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D "D:\Universidad\2023-1\Sistemas embedidos\Tarea1\sample_project\build\bootloader\esp-idf\esptool_py" && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe D:/express-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 "D:/Universidad/2023-1/Sistemas embedidos/Tarea1/sample_project/build/bootloader/bootloader.bin""
Bootloader binary size 0x6700 bytes. 0x900 bytes (8%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/Codigo_de_comunicacion_con_BMI270.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/Codigo_de_comunicacion_con_BMI270.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -I"D:/Universidad/2023-1/Sistemas embedidos/Tarea1/sample_project/build/config" -I"D:/Universidad/2023-1/Sistemas embedidos/Tarea1/sample_project/main" -ID:/express-idf/components/newlib/platform_include -ID:/express-idf/components/freertos/FreeRTOS-Kernel/include -ID:/express-idf/components/freertos/esp_additions/include/freertos -ID:/express-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/express-idf/components/freertos/esp_additions/include -ID:/express-idf/components/esp_hw_support/include -ID:/express-idf/components/esp_hw_support/include/soc -ID:/express-idf/components/esp_hw_support/include/soc/esp32 -ID:/express-idf/components/esp_hw_support/port/esp32/. -ID:/express-idf/components/esp_hw_support/port/esp32/private_include -ID:/express-idf/components/heap/include -ID:/express-idf/components/log/include -ID:/express-idf/components/soc/include -ID:/express-idf/components/soc/esp32/. -ID:/express-idf/components/soc/esp32/include -ID:/express-idf/components/hal/esp32/include -ID:/express-idf/components/hal/include -ID:/express-idf/components/hal/platform_port/include -ID:/express-idf/components/esp_rom/include -ID:/express-idf/components/esp_rom/include/esp32 -ID:/express-idf/components/esp_rom/esp32 -ID:/express-idf/components/esp_common/include -ID:/express-idf/components/esp_system/include -ID:/express-idf/components/esp_system/port/soc -ID:/express-idf/components/esp_system/port/include/private -ID:/express-idf/components/xtensa/include -ID:/express-idf/components/xtensa/esp32/include -ID:/express-idf/components/lwip/include -ID:/express-idf/components/lwip/include/apps -ID:/express-idf/components/lwip/include/apps/sntp -ID:/express-idf/components/lwip/lwip/src/include -ID:/express-idf/components/lwip/port/esp32/include -ID:/express-idf/components/lwip/port/esp32/include/arch -ID:/express-idf/components/esp_ringbuf/include -ID:/express-idf/components/efuse/include -ID:/express-idf/components/efuse/esp32/include -ID:/express-idf/components/driver/include -ID:/express-idf/components/driver/deprecated -ID:/express-idf/components/driver/esp32/include -ID:/express-idf/components/esp_pm/include -ID:/express-idf/components/mbedtls/port/include -ID:/express-idf/components/mbedtls/mbedtls/include -ID:/express-idf/components/mbedtls/mbedtls/library -ID:/express-idf/components/mbedtls/esp_crt_bundle/include -ID:/express-idf/components/esp_app_format/include -ID:/express-idf/components/bootloader_support/include -ID:/express-idf/components/bootloader_support/bootloader_flash/include -ID:/express-idf/components/esp_partition/include -ID:/express-idf/components/app_update/include -ID:/express-idf/components/spi_flash/include -ID:/express-idf/components/pthread/include -ID:/express-idf/components/esp_timer/include -ID:/express-idf/components/app_trace/include -ID:/express-idf/components/esp_event/include -ID:/express-idf/components/nvs_flash/include -ID:/express-idf/components/esp_phy/include -ID:/express-idf/components/esp_phy/esp32/include -ID:/express-idf/components/vfs/include -ID:/express-idf/components/esp_netif/include -ID:/express-idf/components/wpa_supplicant/include -ID:/express-idf/components/wpa_supplicant/port/include -ID:/express-idf/components/wpa_supplicant/esp_supplicant/include -ID:/express-idf/components/esp_wifi/include -ID:/express-idf/components/unity/include -ID:/express-idf/components/unity/unity/src -ID:/express-idf/components/cmock/CMock/src -ID:/express-idf/components/console -ID:/express-idf/components/http_parser -ID:/express-idf/components/esp-tls -ID:/express-idf/components/esp-tls/esp-tls-crypto -ID:/express-idf/components/esp_adc/include -ID:/express-idf/components/esp_adc/interface -ID:/express-idf/components/esp_adc/esp32/include -ID:/express-idf/components/esp_adc/deprecated/include -ID:/express-idf/components/esp_eth/include -ID:/express-idf/components/esp_gdbstub/include -ID:/express-idf/components/esp_gdbstub/xtensa -ID:/express-idf/components/esp_gdbstub/esp32 -ID:/express-idf/components/esp_hid/include -ID:/express-idf/components/tcp_transport/include -ID:/express-idf/components/esp_http_client/include -ID:/express-idf/components/esp_http_server/include -ID:/express-idf/components/esp_https_ota/include -ID:/express-idf/components/esp_lcd/include -ID:/express-idf/components/esp_lcd/interface -ID:/express-idf/components/protobuf-c/protobuf-c -ID:/express-idf/components/protocomm/include/common -ID:/express-idf/components/protocomm/include/security -ID:/express-idf/components/protocomm/include/transports -ID:/express-idf/components/esp_local_ctrl/include -ID:/express-idf/components/esp_psram/include -ID:/express-idf/components/espcoredump/include -ID:/express-idf/components/espcoredump/include/port/xtensa -ID:/express-idf/components/wear_levelling/include -ID:/express-idf/components/sdmmc/include -ID:/express-idf/components/fatfs/diskio -ID:/express-idf/components/fatfs/vfs -ID:/express-idf/components/fatfs/src -ID:/express-idf/components/idf_test/include -ID:/express-idf/components/idf_test/include/esp32 -ID:/express-idf/components/ieee802154/include -ID:/express-idf/components/json/cJSON -ID:/express-idf/components/mqtt/esp-mqtt/include -ID:/express-idf/components/perfmon/include -ID:/express-idf/components/spiffs/include -ID:/express-idf/components/ulp/ulp_common/include -ID:/express-idf/components/ulp/ulp_common/include/esp32 -ID:/express-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og "-fmacro-prefix-map=D:/Universidad/2023-1/Sistemas embedidos/Tarea1/sample_project=." -fmacro-prefix-map=D:/express-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/Codigo_de_comunicacion_con_BMI270.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\Codigo_de_comunicacion_con_BMI270.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/Codigo_de_comunicacion_con_BMI270.c.obj -c "D:/Universidad/2023-1/Sistemas embedidos/Tarea1/sample_project/main/Codigo_de_comunicacion_con_BMI270.c"
D:/Universidad/2023-1/Sistemas embedidos/Tarea1/sample_project/main/Codigo_de_comunicacion_con_BMI270.c: In function 'lowpowermode':
D:/Universidad/2023-1/Sistemas embedidos/Tarea1/sample_project/main/Codigo_de_comunicacion_con_BMI270.c:660:27: error: 'reg_pwr_ctrl' undeclared (first use in this function); did you mean 'reg_pwr_ctr'?
  660 |     bmi_write(I2C_NUM_0, &reg_pwr_ctrl, &val_pwr_ctrl,1);
      |                           ^~~~~~~~~~~~
      |                           reg_pwr_ctr
D:/Universidad/2023-1/Sistemas embedidos/Tarea1/sample_project/main/Codigo_de_comunicacion_con_BMI270.c:660:27: note: each undeclared identifier is reported only once for each function it appears in
D:/Universidad/2023-1/Sistemas embedidos/Tarea1/sample_project/main/Codigo_de_comunicacion_con_BMI270.c:655:13: warning: unused variable 'reg_pwr_ctr' [-Wunused-variable]
  655 |     uint8_t reg_pwr_ctr=0x7D,val_pwr_ctrl=0x04;
      |             ^~~~~~~~~~~
ninja: build stopped: subcommand failed.
